--- a/edit.html
+++ b/edit.html
@@ -3,36 +3,40 @@ layout: default
 title: Oversikt | SSO
 ---
 <h1>Endre profil</h1>
+<hr>
 
 <div class="span12">
-  <form>
-    <p>Alle felter merket med <strong>*</strong> er påkrevde felter.</p>
-    <div class="profile-segment first">
-      <div class="row clearfix inline-error">
-        <label>
-          Fornavn*
-          <input id="given_name" name="user[name][given_name]" type="text" class="regular" value="Pesh" required="required" />
-        </label>
-        <label>
-          Etternavn*
-          <input id="family_name" name="user[name][family_name]" type="text" class="regular" value="" required="required" />
-        </label>
-        <ul class="error-container"></ul>
+  <form class="form-horizontal">
+    <div class="control-group">
+      <label class="control-label" for="firstname">Fornavn</label>
+      <div class="controls">
+        <input type="text" id="firstname" placeholder="">
       </div>
-      <div class="row clearfix inline-error">
-        <label>
-          Visningsnavn*
-          <input id="display_name" name="user[display_name]" type="text" class="double" value="perandre@gmail.com" required="required" />
-        </label>
-        <ul class="error-container"></ul>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="firstname">Etternavn</label>
+      <div class="controls">
+        <input type="text" id="lastname" placeholder="">
       </div>
-      <div class="row clearfix inline-error">
-        <label>
-          Fødselsdato* (dag-måned-år)
-        </label>
-        <div class="select-container">
-          <select name="user[Date_Day]">
-            <option value=""></option>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Visningsnavn</label>
+      <div class="controls">
+        <input type="text" id="inputEmail" placeholder="perandre@front.no">
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputPassword">Password</label>
+      <div class="controls">
+        <input type="password" id="inputPassword" placeholder="Password">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputPassword">Fødselsdag</label>
+      <div class="controls">
+        <select>
+          <option value=""></option>
             <option value="1">01</option>
             <option value="2">02</option>
             <option value="3">03</option>
@@ -64,7 +68,8 @@ title: Oversikt | SSO
             <option value="29">29</option>
             <option value="30">30</option>
             <option value="31">31</option>
-          </select> <span class="o-desk">-</span> <select name="user[Date_Month]">
+        </select>
+        <select>
           <option value=""></option>
           <option value="01" selected="selected">01</option>
           <option value="02">02</option>
@@ -78,183 +83,158 @@ title: Oversikt | SSO
           <option value="10">10</option>
           <option value="11">11</option>
           <option value="12">12</option>
-        </select> <span class="o-desk">-</span> <select name="user[Date_Year]">
-        <option value=""></option>
-        <option value="2003">2003</option>
-        <option value="2002">2002</option>
-        <option value="2001">2001</option>
-        <option value="2000">2000</option>
-        <option value="1999">1999</option>
-        <option value="1998">1998</option>
-        <option value="1997">1997</option>
-        <option value="1996">1996</option>
-        <option value="1995">1995</option>
-        <option value="1994">1994</option>
-        <option value="1993">1993</option>
-        <option value="1992">1992</option>
-        <option value="1991">1991</option>
-        <option value="1990">1990</option>
-        <option value="1989">1989</option>
-        <option value="1988">1988</option>
-        <option value="1987">1987</option>
-        <option value="1986">1986</option>
-        <option value="1985">1985</option>
-        <option value="1984">1984</option>
-        <option value="1983">1983</option>
-        <option value="1982">1982</option>
-        <option value="1981">1981</option>
-        <option value="1980">1980</option>
-        <option value="1979">1979</option>
-        <option value="1978">1978</option>
-        <option value="1977">1977</option>
-        <option value="1976">1976</option>
-        <option value="1975">1975</option>
-        <option value="1974">1974</option>
-        <option value="1973">1973</option>
-        <option value="1972">1972</option>
-        <option value="1971">1971</option>
-        <option value="1970">1970</option>
-        <option value="1969">1969</option>
-        <option value="1968">1968</option>
-        <option value="1967">1967</option>
-        <option value="1966">1966</option>
-        <option value="1965">1965</option>
-        <option value="1964">1964</option>
-        <option value="1963">1963</option>
-        <option value="1962">1962</option>
-        <option value="1961">1961</option>
-        <option value="1960">1960</option>
-        <option value="1959">1959</option>
-        <option value="1958">1958</option>
-        <option value="1957">1957</option>
-        <option value="1956">1956</option>
-        <option value="1955">1955</option>
-        <option value="1954">1954</option>
-        <option value="1953">1953</option>
-        <option value="1952">1952</option>
-        <option value="1951">1951</option>
-        <option value="1950">1950</option>
-        <option value="1949">1949</option>
-        <option value="1948">1948</option>
-        <option value="1947">1947</option>
-        <option value="1946">1946</option>
-        <option value="1945">1945</option>
-        <option value="1944">1944</option>
-        <option value="1943">1943</option>
-        <option value="1942">1942</option>
-        <option value="1941">1941</option>
-        <option value="1940">1940</option>
-        <option value="1939">1939</option>
-        <option value="1938">1938</option>
-        <option value="1937">1937</option>
-        <option value="1936">1936</option>
-        <option value="1935">1935</option>
-        <option value="1934">1934</option>
-        <option value="1933">1933</option>
-        <option value="1932">1932</option>
-        <option value="1931">1931</option>
-        <option value="1930">1930</option>
-        <option value="1929">1929</option>
-        <option value="1928">1928</option>
-        <option value="1927">1927</option>
-        <option value="1926">1926</option>
-        <option value="1925">1925</option>
-        <option value="1924">1924</option>
-        <option value="1923">1923</option>
-        <option value="1922">1922</option>
-        <option value="1921">1921</option>
-        <option value="1920">1920</option>
-        <option value="1919">1919</option>
-        <option value="1918">1918</option>
-        <option value="1917">1917</option>
-        <option value="1916">1916</option>
-        <option value="1915">1915</option>
-        <option value="1914">1914</option>
-        <option value="1913">1913</option>
-        <option value="1912">1912</option>
-        <option value="1911">1911</option>
-        <option value="1910">1910</option>
-        <option value="1909">1909</option>
-        <option value="1908">1908</option>
-        <option value="1907">1907</option>
-        <option value="1906">1906</option>
-        <option value="1905">1905</option>
-        <option value="1904">1904</option>
-        <option value="1903">1903</option>
-        <option value="1902">1902</option>
-        <option value="1901">1901</option>
-        <option value="1900">1900</option>
-        <option value="1899">1899</option>
-        <option value="1898">1898</option>
-        <option value="1897">1897</option>
-        <option value="1896">1896</option>
-        <option value="1895">1895</option>
-        <option value="1894">1894</option>
-        <option value="1893">1893</option>
-      </select>
+        </select>
+        <select> 
+          <option value=""></option>
+          <option value="2003">2003</option>
+          <option value="2002">2002</option>
+          <option value="2001">2001</option>
+          <option value="2000">2000</option>
+          <option value="1999">1999</option>
+          <option value="1998">1998</option>
+          <option value="1997">1997</option>
+          <option value="1996">1996</option>
+          <option value="1995">1995</option>
+          <option value="1994">1994</option>
+          <option value="1993">1993</option>
+          <option value="1992">1992</option>
+          <option value="1991">1991</option>
+          <option value="1990">1990</option>
+          <option value="1989">1989</option>
+          <option value="1988">1988</option>
+          <option value="1987">1987</option>
+          <option value="1986">1986</option>
+          <option value="1985">1985</option>
+          <option value="1984">1984</option>
+          <option value="1983">1983</option>
+          <option value="1982">1982</option>
+          <option value="1981">1981</option>
+          <option value="1980">1980</option>
+          <option value="1979">1979</option>
+          <option value="1978">1978</option>
+          <option value="1977" selected="selected">1977</option>
+          <option value="1976">1976</option>
+          <option value="1975">1975</option>
+          <option value="1974">1974</option>
+          <option value="1973">1973</option>
+          <option value="1972">1972</option>
+          <option value="1971">1971</option>
+          <option value="1970">1970</option>
+          <option value="1969">1969</option>
+          <option value="1968">1968</option>
+          <option value="1967">1967</option>
+          <option value="1966">1966</option>
+          <option value="1965">1965</option>
+          <option value="1964">1964</option>
+          <option value="1963">1963</option>
+          <option value="1962">1962</option>
+          <option value="1961">1961</option>
+          <option value="1960">1960</option>
+          <option value="1959">1959</option>
+          <option value="1958">1958</option>
+          <option value="1957">1957</option>
+          <option value="1956">1956</option>
+          <option value="1955">1955</option>
+          <option value="1954">1954</option>
+          <option value="1953">1953</option>
+          <option value="1952">1952</option>
+          <option value="1951">1951</option>
+          <option value="1950">1950</option>
+          <option value="1949">1949</option>
+          <option value="1948">1948</option>
+          <option value="1947">1947</option>
+          <option value="1946">1946</option>
+          <option value="1945">1945</option>
+          <option value="1944">1944</option>
+          <option value="1943">1943</option>
+          <option value="1942">1942</option>
+          <option value="1941">1941</option>
+          <option value="1940">1940</option>
+          <option value="1939">1939</option>
+          <option value="1938">1938</option>
+          <option value="1937">1937</option>
+          <option value="1936">1936</option>
+          <option value="1935">1935</option>
+          <option value="1934">1934</option>
+          <option value="1933">1933</option>
+          <option value="1932">1932</option>
+          <option value="1931">1931</option>
+          <option value="1930">1930</option>
+          <option value="1929">1929</option>
+          <option value="1928">1928</option>
+          <option value="1927">1927</option>
+          <option value="1926">1926</option>
+          <option value="1925">1925</option>
+          <option value="1924">1924</option>
+          <option value="1923">1923</option>
+          <option value="1922">1922</option>
+          <option value="1921">1921</option>
+          <option value="1920">1920</option>
+          <option value="1919">1919</option>
+          <option value="1918">1918</option>
+          <option value="1917">1917</option>
+          <option value="1916">1916</option>
+          <option value="1915">1915</option>
+          <option value="1914">1914</option>
+          <option value="1913">1913</option>
+        </select>
+      </div>
     </div>
-    <ul class="error-container"></ul>
-  </div>
-  <div class="row clearfix inline-error">
-    <label>
-      Kjønn*
-      <select id="gender" name="user[gender]" class="regular" title="Vennligst velg riktig kjønn">
-        <option value="">Velg</option>
-        <option value="male" >Mann</option>
-        <option value="female" >Kvinne</option>
-      </select>
-    </label>
-    <ul class="error-container"></ul>
-  </div>
-  <ul class="error-container"></ul>
-</div>
-<div class="profile-segment">
-  <h3>Adresse</h3>
-  <fieldset>
-    <div class="row clearfix">
-      <label>
-        Gateadresse
-        <input id="street_address_home" name="user[addresses][home][street_address]" type="text" class="street" value="" />
-      </label>
+
+    <div class="control-group">
+      <label class="control-label" for="gender">Kjønn</label>
+      <div class="controls">
+        <select>
+          <option>Velg</option>
+          <option>Kvinne</option>
+          <option>Mann</option>
+        </select>
+      </div>
     </div>
-    <div class="row clearfix">
-      <label>
-        Postnummer
-        <input id="postal_code_home" name="user[addresses][home][postal_code]" type="text" class="zipcode" pattern="[0-9]*" value="" />
-      </label>
-      <label>
-        Poststed
-        <input id="locality_home" name="user[addresses][home][locality]" type="text" class="locality" value="" />
-      </label>
+
+    <div class="control-group">
+      <label class="control-label" for="street">Gateadresse</label>
+      <div class="controls">
+        <input type="text" id="street" placeholder="">
+      </div>
     </div>
-    <div class="row clearfix">
-      <label>
-        Land
-        <input id="country_home" name="user[addresses][home][country]" type="text" class="country" value="Norge" />
-      </label>
+
+    <div class="control-group">
+      <label class="control-label" for="zip">Postnummer</label>
+      <div class="controls">
+        <input type="text" id="zip" placeholder="">
+      </div>
     </div>
-    <input id="type_home" name="user[addresses][home][type]" type="hidden" value="home" />
-    <input id="latitude_home" name="user[addresses][home][latitude]" type="hidden" value="" />
-    <input id="longitude_home" name="user[addresses][home][longitude]" type="hidden" value="" />
-    <ul class="error-container"></ul>
-  </fieldset>
-</div>
-<div class="profile-segment">
-  <h3>Diverse</h3>
-  <div class="row clearfix">
-    <label>
-      Språk
-      <select id="locale" name="user[locale]" class="regular" title="Vennligst velg språk">
-        <option value="nb_NO" selected="selected">Norsk</option>
-        <option value="sv_SE">Svenska</option>
-        <option value="en_US">English</option>
-      </select>
-    </label>
-  </div>
-</div>
-<div class="form-controls half">
-  <input type="submit" value="Lagre endringer" class="btn submit" />
-  <a class="delete-account" href="/account/delete">Slett min konto</a>
-</div>
-<input type='hidden' name='form_hash' value='co5BzXtDeJd03a4VK5Tav88ytgIt+SLrREOYz3wsJ+o1NTRiNmJhMjdhYTY5OGY2ZDk3MDExMTc4NzAyZWI3NE21jj/1iVfwnqDabbyJG9DPw6L3sVUFUTm4ymWMaHe6' /></form>
+
+    <div class="control-group">
+      <label class="control-label" for="city">Poststed</label>
+      <div class="controls">
+        <input type="text" id="city" placeholder="">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="zip">Språk</label>
+      <div class="controls">
+        <select>
+          <option>Norsk</option>
+          <option>English</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">Lagre endringer</button>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <a href="">Slett min konto</a>
+      </div>
+    </div>
+
+  </form>
+
 </div>
