footer text cleanup

--- a/edit.html
+++ b/edit.html
@@ -2,7 +2,7 @@
 layout: default
 title: Oversikt | SSO
 ---
-<h1>Endre profil</h1>
+<h1 class="center">Endre min profil</h1>
 <hr>
 
 <div class="span12">
