--- a/edit.html
+++ b/edit.html
@@ -2,7 +2,7 @@
 layout: default
 title: Oversikt | SSO
 ---
-<h1 class="center">Endre min profil</h1>
+<h1 class="">Endre min profil</h1>
 <hr>
 
 <div class="span12">
@@ -10,7 +10,7 @@ title: Oversikt | SSO
     <div class="control-group">
       <label class="control-label" for="firstname">Fornavn</label>
       <div class="controls">
-        <input type="text" id="firstname" placeholder="">
+        <input type="text" id="firstname" value="Per Andre">
       </div>
     </div>
     <div class="control-group">
@@ -22,7 +22,7 @@ title: Oversikt | SSO
     <div class="control-group">
       <label class="control-label" for="inputEmail">Visningsnavn</label>
       <div class="controls">
-        <input type="text" id="inputEmail" placeholder="perandre@front.no">
+        <input type="text" id="inputEmail" value="Per André">
       </div>
     </div>
     <div class="control-group">
@@ -225,7 +225,7 @@ title: Oversikt | SSO
 
     <div class="control-group">
       <div class="controls">
-        <button type="submit" class="btn">Lagre endringer</button>
+        <button type="submit" class="btn btn-primary btn-large">Lagre endringer</button>
       </div>
     </div>
 
