--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
 ---
 layout: default
-title: Oversikt | SSO
+title: Oversikt
 ---
-<h1>Oversikt</h1>
+<h1 class="center">Oversikt</h1>
+<hr>
+
+<div class="alert alert-block">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4>Abonnement på Varingen.no autofornyes </h4>
+  Ditt halvårsabonnement på Varingen.no er vil bli fornyet om 14 dager.
+</div>
+
+<div class="row">
+  <div class="span4">
+    <div class="well">
+      <h2>Hei, Per André!</h2>
+      <p>Du er logget inn som <a href="">perandre@front.no</a>, og var sist logget inn fra din iPad.
+    </div>
+  </div>
+  <div class="span4">
+    <div class="well">
+      <h2>Mine abonnementer</h2>
+      <p>Du er betalende abonnent på Varingen.no for alle digitale plattoformer. <a href="">Se mine abonnementer.</a></p>
+    </div>
+  </div>
+  <div class="span4">
+    <div class="well">
+      <h2>Tilknyttede kontoer</h2>
+      <p>Du har ingen tilknyttede kontoer. <a href="">Gjør det her</a>.</p>
+    </div>
+  </div>
+</div>
+
+<h3>Endre viktig info</h3>
+<hr>
+<p><a href="">Behandle e-postadresser</a></p>
+<p><a href="">Behandle telefonnummer</a></p>
+<p><a href="">Behandle betalingskort</a></p>
