--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>  Oversikt | SSO </title>
+  <title>  Aboo | Login </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -40,7 +40,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="index.html">SSO</a>
+            <a class="brand" href="index.html">Aboo</a>
             <div class="nav-collapse">
               <ul class="nav">
               </ul>
@@ -53,21 +53,21 @@
 
         <div class="container">
 
-  <form class="form-signin">
-    <h2 class="form-signin-heading">Vennligst logg inn</h2>
-    <input type="text" class="input-block-level" placeholder="E-post ">
-    <input type="password" class="input-block-level" placeholder="Passord">
-    <label class="checkbox">
-      <input type="checkbox" value="remember-me"> Husk meg
-    </label>
-    <button class="btn btn-large btn-primary" type="submit">Logg inn</button>
-  </form>
+          <form class="form-signin">
+            <h2 class="form-signin-heading">Vennligst logg inn</h2>
+            <input type="text" class="input-block-level" placeholder="E-post ">
+            <input type="password" class="input-block-level" placeholder="Passord">
+            <label class="checkbox">
+              <input type="checkbox" value="remember-me"> Husk meg
+            </label>
+            <button class="btn btn-large btn-primary" type="submit">Logg inn</button>
+          </form>
 
-</div> <!-- /container -->
+        </div> <!-- /container -->
 
         <footer>
           <hr>
-          <p>&copy; Front 2012. Hjelp Betinglelser Personvern Om SSO</p>
+          <p class="muted">&copy; Front 2012. <a class="muted" href="#">Hjelp</a> <a class="muted" href="#">Betingelser</a> <a class="muted" href="#">Personvern</a> <a class="muted" href="#">Om</a> </p>
         </footer>
 
       </div> <!-- /container -->
