--- a/subs.html
+++ b/subs.html
@@ -18,13 +18,13 @@ title: Bestillinger
   <tbody>
     <tr>
       <td>1</td>
-      <td><strong>Avis-app for Varingen</strong></td>
+      <td><strong>Avis-app for Varingen - familielisens</strong></td>
       <td>10.06.13 - 10.01.14</td>
       <td>Belastes kort (<a href="#">Endre</a>)</td>
     </tr>
     <tr>
       <td>2</td>
-      <td><strong>Avis-app for Varingen</strong></td>
+      <td><strong>Avis-app for Varingen - singellisens</strong></td>
       <td>01.01.13 - 01.06.13</td>
       <td>Avsluttet</td>
     </tr>
